2017-03-24  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO:
	# benchmark, profile, optimize
	# fix gparser, bparser, dynamic training
	# implement rnn, optimize features for rnn
	# compare results on acl11 with new code
	# read papers
	# knet: implement blstm and rnnlm benchmarks in knet for profiling
	# knet: optimize sum_outgrads, overwriting did not work, try sparse outgrads
	# knet: integrate enis's new broadcast kernels

	## Optimize English
	# rnn/fnn
	# flist
	# wvecs
	# cvecs
	# hidden size
	# beam
	# arctype
	# optimizer
	# check zero vectors
	# fine-tune word vectors
	# dynamic vs static training
	# use lcword, lemma, xpos, feats, deps, misc as features
	# ensemble
	# separate move and lable pred
	# global vs local normalization
	# character based encoder
	# attention model
	# self learning
	# train non-lexical models and do loocv for surprize languages

	# Can we use unlabeled data for surprize languages?
	# What is the UD policy on coordination, single headedness, projectivity?
	# Can we use an RNN to learn parse moves? (read papers)
	# What are the latest state of the art techniques?
	# Can we use wvec, cvec in surprize languages?
	# cycles, multiple root nodes, wrong number of columns or wrong indexing of nodes will be considered invalid output.
	# The evaluation starts by aligning the system-produced words to the gold standard ones
	# Dealing with non-projectivity
	# graph based alternatives?


2017-03-21  dyuret  <dyuret@ku.edu.tr>

	* ideas:
	# try wvecs from conll, no cvec, get baseline, compare with static wvec on acl11.
	# try wvecs from facebook.
	# try wvecs from volkan.
	# try wvec/cvec from bilstm model from omer, compare with static wvec/cvec on acl11.
	# we can use lstm hiddens for cvec, or do the softmax and use averaged wvecs.
	# parse with an rnn, possibly preinitialized embeddings from bilstm.

	# We have multiple corpora for one language. Keep one wvec/vocab per language? Defining a Vocab type.

2017-03-19  dyuret  <dyuret@ku.edu.tr>
